--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='photoRufinos'
 DB_USER='root'
-DB_PASSWORD='Na.161105'
+DB_PASSWORD='Sptech1325'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
