--- a/.env.dev
+++ b/.env.dev
@@ -2,7 +2,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
-DB_DATABASE='photoRufinos'
+DB_DATABASE='photorufinos'
 DB_USER='root'
 DB_PASSWORD='Sptech1325'
 DB_PORT=3306
